fix for overflow of iPhone on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -140,7 +140,7 @@ hr.desk:after{
 		overflow: hidden;
 	}
 	img.iphone {
-		
+		margin-right: 0px;
 		margin-top:-100px;
 		z-index: 1;
 		overflow: hidden;
